[package]
name = "stream-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-response-cache = "0.3.0"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
